--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "remixicon": "^4.7.0",
-    "three": "^0.181.1"
+    "remixicon": "^4.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
